--- a/_posts/2018-02-23-hieu-doi.md
+++ b/_posts/2018-02-23-hieu-doi.md
@@ -6,10 +6,10 @@ h1-title: "Hiểu đời"
 description: ""
 meta-description: ""
 meta-keywords: ""
-categories: tin-tuc
-category: tra-ngu-ngon
+categories: blog ki-nang-mem
+category: ki-nang-mem
 tags: 
-permalink: "/.html"
+permalink: "/blog/hieu-doi.html"
 published: true
 sitemap: true
 image: "/images/.jpg"
