--- a/_posts/2018-02-23-hieu-doi.md
+++ b/_posts/2018-02-23-hieu-doi.md
@@ -12,7 +12,7 @@ tags:
 permalink: "/blog/hieu-doi.html"
 published: true
 sitemap: true
-image: "/images/.jpg"
+image: "/media/images/blog/hieu-doi.jpg"
 date: 2017-10-31 22:00:00
 author: 
 ---
