--- a/_posts/2018-02-23-hieu-doi.md
+++ b/_posts/2018-02-23-hieu-doi.md
@@ -14,7 +14,7 @@ published: true
 sitemap: true
 image: "/media/images/blog/hieu-doi.jpg"
 date: 2018-02-23 16:00:00
-author: 
+author: Trọng Huỳnh
 ---
 
 ##
