--- a/_posts/2018-02-23-hieu-doi.md
+++ b/_posts/2018-02-23-hieu-doi.md
@@ -17,9 +17,7 @@ date: 2018-02-23 16:00:00
 author: Trọng Huỳnh
 ---
 
-##
 
-<img  src="https://i.imgur.com/gbBq10l.png" alt="vị trí la casta văn phú" class="image_fade responsive-img lazy"> 
 
 ## 1. 
 
@@ -129,6 +127,7 @@ Không ngủ nơi ngõ hẻm, độc nhất khi gió lùa.
 
 Muốn ngủ để tấm thân nhẹ nhõm, chân không hướng tây đầu không hướng đông
 
+<img  src="/media/images/blog/hieu-doi.jpg" alt="hiểu đời" class="image_fade responsive-img lazy"> 
 
 <div class="heading-block center nobottomborder">
 	<h2>HIỂU ĐỜI</h2>
