--- a/_posts/2018-02-23-hieu-doi.md
+++ b/_posts/2018-02-23-hieu-doi.md
@@ -6,10 +6,10 @@ h1-title: "Hiểu đời"
 description: ""
 meta-description: ""
 meta-keywords: ""
-categories: blog ki-nang-mem
-category: ki-nang-mem
+categories: blog ky-nang-mem
+category: ky-nang-mem
 tags: 
-permalink: "/blog/hieu-doi.html"
+permalink: "/ky-nang-mem/hieu-doi.html"
 published: true
 sitemap: true
 image: "/media/images/blog/hieu-doi.jpg"
