--- a/_posts/2018-02-23-hieu-doi.md
+++ b/_posts/2018-02-23-hieu-doi.md
@@ -5,10 +5,10 @@ meta-title: "Hiểu đời"
 h1-title: "Hiểu đời"
 description: ""
 meta-description: ""
-meta-keywords: ""
+meta-keywords: "hiểu đời, kỹ năng mềm, chế độ sinh hoạt tốt, đồng hồ sinh học, ngủ quay hướng nào là tốt"
 categories: blog ky-nang-mem
 category: ky-nang-mem
-tags: 
+tags: hiểu-đời kỹ-năng-mềm
 permalink: "/ky-nang-mem/hieu-doi.html"
 published: true
 sitemap: true
